# reference

./: .gitignore  README.md  To-do list.md  backup-partitions.sh  development-setup.md
[cs200] pegSolitaire/: readme.md
[cs300, CQuiz 2]/: .project
[cs300, CQuiz 3]/: .project
[cs300, CQuiz 4]/: .project
[cs300, CQuiz 5]/: .project
[cs300, P00] piggyBank/: readme.md
[cs300, P01] COVIDTracker/: .project
[cs300, P02] Wisconsin Prairie/: .classpath  .project
[cs300, P03] Benchmarking/: .gitignore  .project  Benchmarker.java  ComparisonMethods.java  benchmark.txt
[cs300, P04] File explorer/: .project
[cs300, P05] Ballot Box/: .project
[cs300, P06] Treasure Hunt/: .classpath  .project
[cs300, P07] Sustenance Boulevard/: .project
[cs300, P08] LIFO Inbox Reader/: .project
[cs300, P09] Pokemon Catalog/: .project
[cs300, P10] Battle System/: .project  characters.txt
[cs300, cumulative quiz 1]/: .project
[cs300] piggyBank/: PiggyBankDriver.java
[cs354 TA, P2A] sudoku/: check_board.c
[cs536, P6] /: README.md
cpp/: CMakeLists.txt  DataTypeSize.cpp  DataTypeSize.out  Exceptions.cpp  a.cpp  a.out  basic.cpp  basic.out  checkC++20Support.cpp  classInheritance.cpp  command.sh  iostream.cpp  iostream.out  lvalue-rvalue.cpp  main.cpp  main.out  namespace.cpp  operatorOverloading.cpp  package.md  pointer.cpp  pointer.out  smart_pointers.cpp  variableDeclaration.cpp  variableDeclaration.out
cpp/Modularity/: header-alternative.h  header.h  module.cpp  user.cpp
cpp/examples/: .gitignore
cpp/examples/33.SmartPointers/33.2UniquePointers/: main.cpp
(+799 files in other folders)
